# SwitchBoard-MCP

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  __init__.py  banner.py  cli_test.py  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_request.md
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
.qwen/: settings.json
config/: models.yaml  settings.py
context/: __init__.py  extractor.py  serializer.py  state.py
providers/: __init__.py  anthropic.py  base.py  health.py  openrouter.py
router/: __init__.py  classifier.py  fallback_chain.py  rule_engine.py
tests/: __init__.py  test_integration.py  test_router.py
