[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchboard-mcp"
version = "0.1.0"
description = "Intelligent multi-provider agent routing MCP server — transparently switch between AI providers and models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Switchboard Contributors" },
]
keywords = ["mcp", "llm", "routing", "anthropic", "openrouter", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "pyfiglet>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
switchboard = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["N999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
